--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%; /* White */
+    --background: 60 80% 95%; /* Desaturated light yellow */
     --foreground: 240 10% 3.9%;
 
     --card: 0 0% 100%;
@@ -13,8 +13,8 @@
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
     
-    --primary: 142.1 76.2% 36.3%; /* Green */
-    --primary-foreground: 355.7 100% 97.3%;
+    --primary: 43 100% 50%; /* Saffron yellow */
+    --primary-foreground: 240 10% 3.9%;
 
     --secondary: 47.9 95.8% 53.1%; /* Yellow */
     --secondary-foreground: 240 5.9% 10%;
@@ -22,7 +22,7 @@
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
 
-    --accent: 346.8 77.2% 49.8%; /* Red */
+    --accent: 0 72% 51%; /* Chili red */
     --accent-foreground: 0 0% 98%;
 
     --destructive: 0 84.2% 60.2%;
@@ -30,18 +30,18 @@
 
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
-    --ring: 240 5.9% 10%;
+    --ring: 43 100% 50%;
 
     --radius: 0.8rem;
     
     --sidebar-background: 240 4.8% 95.9%;
     --sidebar-foreground: 240 10% 3.9%;
-    --sidebar-primary: 142.1 76.2% 36.3%;
-    --sidebar-primary-foreground: 355.7 100% 97.3%;
-    --sidebar-accent: 346.8 77.2% 49.8%;
+    --sidebar-primary: 43 100% 50%;
+    --sidebar-primary-foreground: 240 10% 3.9%;
+    --sidebar-accent: 0 72% 51%;
     --sidebar-accent-foreground: 0 0% 98%;
     --sidebar-border: 240 5.9% 90%;
-    --sidebar-ring: 240 5.9% 10%;
+    --sidebar-ring: 43 100% 50%;
   }
   .dark {
     --background: 240 10% 3.9%;
@@ -53,8 +53,8 @@
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --primary: 142.1 76.2% 36.3%;
-    --primary-foreground: 355.7 100% 97.3%;
+    --primary: 43 100% 50%;
+    --primary-foreground: 240 10% 3.9%;
 
     --secondary: 47.9 95.8% 53.1%;
     --secondary-foreground: 240 5.9% 10%;
@@ -62,7 +62,7 @@
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
 
-    --accent: 346.8 77.2% 49.8%;
+    --accent: 0 72% 51%;
     --accent-foreground: 0 0% 98%;
 
     --destructive: 0 62.8% 30.6%;
@@ -70,16 +70,16 @@
 
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
-    --ring: 142.1 76.2% 36.3%;
+    --ring: 43 100% 50%;
     
     --sidebar-background: 240 3.7% 15.9%;
     --sidebar-foreground: 0 0% 98%;
-    --sidebar-primary: 142.1 76.2% 36.3%;
+    --sidebar-primary: 43 100% 50%;
     --sidebar-primary-foreground: 355.7 100% 97.3%;
-    --sidebar-accent: 346.8 77.2% 49.8%;
+    --sidebar-accent: 0 72% 51%;
     --sidebar-accent-foreground: 0 0% 98%;
     --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 142.1 76.2% 36.3%;
+    --sidebar-ring: 43 100% 50%;
   }
 }
 
